added: api get product by id && refactor swagger ui
