# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /api
 definitions:
   config.SwaggerInfoResult:
     properties:
@@ -34,14 +33,14 @@ definitions:
         type: string
       price:
         type: integer
+    required:
+    - amount
+    - name
+    - price
     type: object
-host: localhost:8080
 info:
   contact: {}
-  description: Learning API Description
   license: {}
-  title: Learning API
-  version: "1.0"
 paths:
   /v1/healthcheck:
     get:
@@ -120,6 +119,35 @@ paths:
           schema:
             $ref: '#/definitions/config.SwaggerInfoResult'
       summary: Create Product
+      tags:
+      - Product
+  /v1/products/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get Product Service API
+      parameters:
+      - description: (en, th)
+        in: header
+        name: Accept-Language
+        type: string
+      - description: query by product_id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Product'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/config.SwaggerInfoResult'
+      summary: Get Product
       tags:
       - Product
 swagger: "2.0"
